feat:server_name 수정

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name wibee-front-end;
 
     location / {
         try_files $uri $uri/ /index.html;
