feat:배포된 서버에서 spa 인식을 위한 nginx.conf 파일 수정 (#44)

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,8 @@
 server {
     listen 80;
-    server_name wibee-front-end;
+    server_name www.wibeechat.com;
+
+    root /usr/share/nginx/html; # 올바른 React 빌드 디렉터리 설정
 
     location / {
         try_files $uri $uri/ /index.html;
