--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name wibee-front-end;
+    server_name www.wibeechat.com;
 
     root /usr/share/nginx/html;
     
