--- a/nginx.conf
+++ b/nginx.conf
@@ -3,31 +3,19 @@ server {
     server_name www.wibeechat.com;
 
     root /usr/share/nginx/html;
-    
+
+    # 정적 파일 요청 처리
+    location /view/static/ {
+        alias /usr/share/nginx/html/static/;
+    }
+
+    # SPA 요청 처리
+    location /view {
+        try_files $uri $uri/ /index.html;
+    }
+
+    # 기본 설정
     location / {
         try_files $uri $uri/ /index.html;
-    }
-
-    # /view 경로 처리 추가
-    location /view {
-        alias /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
-
-        # static 파일 처리
-        location ~ ^/view/static/ {
-            expires 30d;
-            add_header Cache-Control "public, no-transform";
-        }
-    }
-
-    # 정적 파일 캐싱 설정
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-        expires 30d;
-        add_header Cache-Control "public, no-transform";
-    }
-
-    error_page 404 /index.html;
-    location = /index.html {
-        internal;
     }
 }
