--- a/nginx.conf
+++ b/nginx.conf
@@ -4,12 +4,13 @@ server {
 
     root /usr/share/nginx/html;
 
-    # 정적 파일 요청 처리
+    # 정적 파일 처리
     location /view/static/ {
         alias /usr/share/nginx/html/static/;
+        autoindex on; # 디렉토리 인덱스 허용
     }
 
-    # SPA 요청 처리
+    # React SPA 처리
     location /view {
         try_files $uri $uri/ /index.html;
     }
