--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,11 @@
 server {
     listen 80;
     server_name www.wibeechat.com;
-
     root /usr/share/nginx/html;
+
+    location /static {
+        rewrite ^/static(/.*)$ /view/static$1 permanent;
+    }
 
     # 정적 파일 처리
     location /view/static/ {
