bug: static 파일 경로 오류

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,22 +1,25 @@
 server {
     listen 80;
-    server_name www.wibeechat.com;
+    server_name localhost;
 
-    root /usr/share/nginx/html;
-
-    # 정적 파일 처리
-    location /view/static/ {
-        alias /usr/share/nginx/html/static/;
-        autoindex on; # 디렉토리 인덱스 허용
-    }
-
-    # React SPA 처리
-    location /view {
-        try_files $uri $uri/ /index.html;
-    }
-
-    # 기본 설정
+    # React 애플리케이션 라우팅 설정
     location / {
-        try_files $uri $uri/ /index.html;
+        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri /index.html;  # SPA 라우팅을 지원
+    }
+
+    # 정적 파일 캐싱 최적화
+    location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|webp)$ {
+        root /usr/share/nginx/html;
+        expires 6M;
+        access_log off;
+        add_header Cache-Control "public";
+    }
+
+    # 오류 페이지 처리
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
     }
 }
