--- a/nginx.conf
+++ b/nginx.conf
@@ -1,25 +1,26 @@
 server {
     listen 80;
     server_name www.wibeechat.com;
+
+    # React 애플리케이션 빌드 경로
     root /usr/share/nginx/html;
+    index index.html;
 
-    location /static {
-        rewrite ^/static(/.*)$ /view/static$1 permanent;
+    # React 정적 파일 처리
+    location /static/ {
+        root /usr/share/nginx/html; # 정적 파일 위치
+        expires 1y; # 캐싱 설정
+        access_log off;
+        add_header Cache-Control "public";
     }
 
-    # 정적 파일 처리
-    location /view/static/ {
-        alias /usr/share/nginx/html/static/;
-        autoindex on; # 디렉토리 인덱스 허용
-    }
-
-    # React SPA 처리
+    # React SPA 처리 (모든 /view 경로 처리)
     location /view {
-        try_files $uri $uri/ /index.html;
+        try_files $uri /index.html;
     }
 
-    # 기본 설정
-    location / {
-        try_files $uri $uri/ /index.html;
+    # 기본 경로 리다이렉트 처리 ("/"를 "/view"로 리다이렉트)
+    location = / {
+        return 301 /view;
     }
 }
