bug: static 경로 문제

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,14 +2,16 @@ server {
     listen 80;
     server_name localhost;
 
-    # React 애플리케이션 라우팅 설정
     location / {
         root /usr/share/nginx/html;
         index index.html;
-        try_files $uri /index.html;  # SPA 라우팅을 지원
+        try_files $uri /index.html; # SPA 라우팅
     }
 
-    # 정적 파일 캐싱 최적화
+    location /static/ {
+        root /usr/share/nginx/html; # static 폴더 처리
+    }
+
     location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|webp)$ {
         root /usr/share/nginx/html;
         expires 6M;
@@ -17,12 +19,8 @@ server {
         add_header Cache-Control "public";
     }
 
-    # 오류 페이지 처리
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
         root /usr/share/nginx/html;
     }
 }
-
-
-
