--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "missa-front",
     "version": "0.1.0",
-    "homepage": "/",
+    "homepage": "/view",
     "private": true,
     "dependencies": {
         "@testing-library/jest-dom": "^5.17.0",
