--- a/nginx.conf
+++ b/nginx.conf
@@ -2,16 +2,19 @@ server {
     listen 80;
     server_name localhost;
 
-    location / {
+    # "/view" 경로와 SPA 라우팅 처리
+    location /view {
         root /usr/share/nginx/html;
         index index.html;
-        try_files $uri /index.html; # SPA 라우팅
+        try_files $uri /index.html;  # SPA 라우팅: 요청된 파일이 없으면 index.html 반환
     }
 
-    location /static/ {
-        root /usr/share/nginx/html; # static 폴더 처리
+    # "/view/static" 경로 처리
+    location /view/static/ {
+        root /usr/share/nginx/html;
     }
 
+    # 정적 파일 캐싱 처리
     location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|webp)$ {
         root /usr/share/nginx/html;
         expires 6M;
@@ -19,6 +22,24 @@ server {
         add_header Cache-Control "public";
     }
 
+    # 아이콘, manifest, 로고 파일 처리
+    location = /view/favicon.ico {
+        root /usr/share/nginx/html;
+    }
+
+    location = /view/manifest.json {
+        root /usr/share/nginx/html;
+    }
+
+    location = /view/logo192.png {
+        root /usr/share/nginx/html;
+    }
+
+    location = /view/logo512.png {
+        root /usr/share/nginx/html;
+    }
+
+    # 에러 페이지 처리
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
         root /usr/share/nginx/html;
