--- a/nginx.conf
+++ b/nginx.conf
@@ -1,47 +1,30 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name www.wibeechat.com;
 
-    # "/view" 경로와 SPA 라우팅 처리
-    location /view {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri /index.html;  # SPA 라우팅: 요청된 파일이 없으면 index.html 반환
+    # React 빌드 결과 루트 디렉터리
+    root /usr/share/nginx/html;
+
+    # SPA 라우팅: 모든 요청을 /view/index.html로 전달
+    location / {
+        index view/index.html;
+        try_files $uri /view/index.html;
     }
 
-    # "/view/static" 경로 처리
+    # /view 경로에 대한 정적 파일 처리
+    location /view/ {
+        index index.html;
+        try_files $uri /view/index.html;
+    }
+
+    # /view/static 하위 경로에 대해 정적 파일 매핑
     location /view/static/ {
         root /usr/share/nginx/html;
     }
 
-    # 정적 파일 캐싱 처리
+    # 특정 파일 캐싱 (필요 시)
     location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|webp)$ {
-        root /usr/share/nginx/html;
         expires 6M;
-        access_log off;
         add_header Cache-Control "public";
-    }
-
-    # 아이콘, manifest, 로고 파일 처리
-    location = /view/favicon.ico {
-        root /usr/share/nginx/html;
-    }
-
-    location = /view/manifest.json {
-        root /usr/share/nginx/html;
-    }
-
-    location = /view/logo192.png {
-        root /usr/share/nginx/html;
-    }
-
-    location = /view/logo512.png {
-        root /usr/share/nginx/html;
-    }
-
-    # 에러 페이지 처리
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
     }
 }
