--- a/nginx.conf
+++ b/nginx.conf
@@ -19,7 +19,7 @@ server {
 
     # /view/static 하위 경로에 대해 정적 파일 매핑
     location /view/static/ {
-        root /usr/share/nginx/html/view;
+        root /usr/share/nginx/html;
     }
 
     # 특정 파일 캐싱 (필요 시)
