이젠 나도 모르겠다

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name www.wibeechat.com;
 
-    # React 빌드 결과 루트 디렉터리
+    # Root 디렉터리를 React 앱으로 설정
     root /usr/share/nginx/html;
 
     # SPA 라우팅: 모든 요청을 /view/index.html로 전달
@@ -11,18 +11,12 @@ server {
         try_files $uri /view/index.html;
     }
 
-    # /view 경로에 대한 정적 파일 처리
-    location /view/ {
-        index index.html;
-        try_files $uri /view/index.html;
-    }
-
-    # /view/static 하위 경로에 대해 정적 파일 매핑
+    # /view/static 경로 정적 파일 처리
     location /view/static/ {
-        root /usr/share/nginx/html;
+        alias /usr/share/nginx/html/view/static/;
     }
 
-    # 특정 파일 캐싱 (필요 시)
+    # 특정 정적 파일 캐싱 설정
     location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|webp)$ {
         expires 6M;
         add_header Cache-Control "public";
