--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ server {
 
     # SPA 라우팅: 모든 요청을 /view/index.html로 전달
     location / {
-        index view/index.html;
+        index index.html;
         try_files $uri /view/index.html;
     }
 
