--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ server {
     server_name www.wibeechat.com;
 
     # Root 디렉터리를 React 앱으로 설정
-    root /usr/share/nginx/html/view;
+    root /usr/share/nginx/html;
 
     # SPA 라우팅: 모든 요청을 /view/index.html로 전달
     location / {
