--- a/nginx.conf
+++ b/nginx.conf
@@ -3,12 +3,12 @@ server {
     server_name www.wibeechat.com;
 
     # Root 디렉터리를 React 앱으로 설정
-    root /usr/share/nginx/html;
+    root /usr/share/nginx/html/view;
 
     # SPA 라우팅: 모든 요청을 /view/index.html로 전달
     location / {
         index index.html;
-        try_files $uri /view/index.html;
+        try_files $uri /index.html;
     }
 
     # 특정 정적 파일 캐싱 설정
