--- a/nginx.conf
+++ b/nginx.conf
@@ -2,16 +2,27 @@ server {
     listen 80;
     server_name www.wibeechat.com;
 
-    # Root 디렉터리를 React 앱으로 설정
-    root /usr/share/nginx/html/view;
+    # React 빌드 결과 루트 디렉터리
+    root /usr/share/nginx/html;
 
     # SPA 라우팅: 모든 요청을 /view/index.html로 전달
     location / {
-        index index.html;
-        try_files $uri /index.html;
+        index view/index.html;
+        try_files $uri /view/index.html;
     }
 
-    # 특정 정적 파일 캐싱 설정
+    # /view 경로에 대한 정적 파일 처리
+    location /view/ {
+        index index.html;
+        try_files $uri /view/index.html;
+    }
+
+    # /view/static 하위 경로에 대해 정적 파일 매핑
+    location /view/static/ {
+        root /usr/share/nginx/html;
+    }
+
+    # 특정 파일 캐싱 (필요 시)
     location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|webp)$ {
         expires 6M;
         add_header Cache-Control "public";
